# worker-rest-calendar

./: .metadata  AGENTS.md  CHANGELOG.md  PRIVACY.md  PROGRESS.md  PROJECT_MANIFEST.yaml  README.md  analysis_options.yaml  pubspec.yaml
backup/: 001-Phase00至03代码变更记录.md  002-多风格主题代码变更记录.md  003-桌面摆件跨分辨率定位代码变更记录.md  004-首页剩余工作日计数代码变更记录.md
codex/: 00_BOOTSTRAP.md  01_SCHEDULE_ENGINE.md  02_LOCAL_DATA.md  03_DESIGN_SYSTEM.md  04_ONBOARDING_PATTERNS.md  05_TODAY_CALENDAR_EDITOR.md  06_NOTIFICATIONS_STATS.md  07_DESKTOP_WIDGET.md  08_MOBILE_HOME_WIDGETS.md  09_SYNC_EXPORT_IMPORT.md  10_QA_RELEASE.md  11_DESKTOP_WIDGET_SUITE.md  MASTER_PROMPT.md
config/: day_status.schema.json  design_tokens.json  feature_flags.json  sample_schedule.json
docs/: 00_ENVIRONMENT.md  01_PRODUCT_REQUIREMENTS.md  02_FUNCTIONAL_SPEC.md  03_SCHEDULE_ENGINE.md  04_INFORMATION_ARCHITECTURE.md  05_TECH_ARCHITECTURE.md  06_DATA_MODEL.md  07_UI_UX_SPEC.md  08_DESKTOP_AND_HOME_WIDGETS.md  09_NOTIFICATIONS_STATS_SYNC.md  10_TEST_ACCEPTANCE.md  11_PRIVACY_RELEASE.md  12_IMPLEMENTATION_PLAN.md  13_WINDOWS_ANDROID_RELEASE.md  14_AUTO_UPDATE_RELEASE_CONTRACT.md
integration_test/: windows_android_release_flow_test.dart
lib/: main.dart
scripts/: generate_app_icons.py  next_semver.py  validate_package.py
starter/: README.md  analysis_options.yaml  pubspec.yaml
test/: app_test.dart
ui/: COMPONENT_CATALOG.md  COPY_GUIDE.md  REFERENCE_NOTES.md  SCREEN_CATALOG.md  style-guide.html
windows/: CMakeLists.txt
windows/updater/: CMakeLists.txt  update_main.cpp
进度快照/: 001-Phase00至03完成进入Phase04.md  (+19 more)
(+245 files in other folders)
